--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="css/custom.css" />
 </head>
 <body>
-  <!-- <style> -->
   <table class="body" data-made-with-foundation>
     <tr>
       <td class="float-center" align="center" valign="top">
@@ -45,7 +44,7 @@
                               <td>
                                 <table>
                                   <tr>
-                                    <th class="menu-item"><a href="http://zurb.com">Web version</a> | <a href="http://zurb.com">Update preferences</a> | <a href="http://zurb.com">Unsubscribe</a></th>
+                                    <th class="menu-item"><a href="http://zurb.com">Web version</a> | <a href="http://zurb.com">Update preferences</a> | <a href="http://zurb.com"><unsubscribe>Unsubscribe</unsubscribe></a></th>
                                   </tr>
                                 </table>
                               </td>
@@ -92,7 +91,7 @@
                                 <tr>
                                   <th>
                                     <center data-parsed=""> 
-                                      <img src="http://placehold.it/548x200" align="center" class="float-center"> 
+                                      <img editable="true" src="http://placehold.it/548x200" align="center" class="float-center"> 
                                     </center>
                                   </th>
                                 </tr>
@@ -123,7 +122,7 @@
                               <tbody>
                                 <tr>
                                   <th>
-                                    <h2 class="heading-brand">Full Width Heading Repeater</h2>
+                                    <h2 class="heading-brand"><singleline label='Section heading.'>Full Width Heading Repeater</singleline></h2>
                                   </th>
                                 </tr>
                             </tbody></table>
@@ -175,7 +174,7 @@
                                   <tr>
                                     <th>
                                       <center data-parsed=""> 
-                                        <img src="http://placehold.it/548x200" align="center" class="float-center"> 
+                                        <img editable="true" src="http://placehold.it/548x200" align="center" class="float-center"> 
                                       </center>
                                     </th>
                                   </tr>
@@ -193,7 +192,7 @@
                                 <tbody>
                                   <tr>
                                     <td>
-                                       <div class="editable-content"> 
+                                       <div editable="true" class="editable-content"> 
                                         <h6 class="heading-brand">Text with a full-width image repeater</h6>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc a eros in est posuere efficitur. In hac habitasse platea dictumst. Aenean tempor tristique vestibulum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas nec mauris finibus, ultricies ex eu..</p>
                                         <p>Magna non elementum varius, lorem massa iaculis ligula, quis ultricies arcu leo vitae ipsum. Aliquam eros nibh, faucibus ut dictum sit amet, faucibus vel mauris. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus at eros justo. </p>
@@ -265,7 +264,7 @@
                               <tr>
                                 <th>
                                   <center data-parsed=""> 
-                                    <img src="http://placehold.it/265x200" align="center" class="float-center"> 
+                                    <img editable="true" src="http://placehold.it/265x200" align="center" class="float-center"> 
                                   </center>
                                 </th>
                               </tr>
@@ -312,7 +311,7 @@
                               <tr>
                                 <th>
                                   <center data-parsed=""> 
-                                    <img src="http://placehold.it/265x200" align="center" class="float-center"> 
+                                    <img editable="true" src="http://placehold.it/265x200" align="center" class="float-center"> 
                                   </center>
                                 </th>
                               </tr>
@@ -452,7 +451,7 @@
                                 <tr>
                                   <th>
                                     <center data-parsed=""> 
-                                      <img src="http://placehold.it/265x200" align="center" class="float-center"> 
+                                      <img editable="true" src="http://placehold.it/265x200" align="center" class="float-center"> 
                                     </center>
                                   </th>
                                 </tr>
@@ -472,7 +471,7 @@
                               <tr>
                                 <th>
                                   <center data-parsed=""> 
-                                    <img src="http://placehold.it/265x200" align="center" class="float-center"> 
+                                    <img editable="true" src="http://placehold.it/265x200" align="center" class="float-center"> 
                                   </center>
                                 </th>
                               </tr>
@@ -520,7 +519,7 @@
                                 <tr>
                                   <th>
                                     <center data-parsed=""> 
-                                      <img src="http://placehold.it/265x200" align="center" class="float-center"> 
+                                      <img editable="true" src="http://placehold.it/265x200" align="center" class="float-center"> 
                                     </center>
                                   </th>
                                 </tr>
@@ -560,7 +559,7 @@
                                 <tr>
                                   <th>
                                     <center data-parsed=""> 
-                                      <img src="http://placehold.it/265x200" align="center" class="float-center"> 
+                                      <img editable="true" src="http://placehold.it/265x200" align="center" class="float-center"> 
                                     </center>
                                   </th>
                                 </tr>
@@ -627,7 +626,7 @@
                                 <tr>
                                   <th>
                                     <center data-parsed=""> 
-                                      <img src="http://placehold.it/172x100" align="center" class="float-center"> 
+                                      <img editable="true" editable="true"  src="http://placehold.it/172x100" align="center" class="float-center"> 
                                     </center>
                                   </th>
                                 </tr>
@@ -647,7 +646,7 @@
                               <tr>
                                 <th>
                                   <center data-parsed=""> 
-                                    <img src="http://placehold.it/172x100" align="center" class="float-center"> 
+                                    <img editable="true" src="http://placehold.it/172x100" align="center" class="float-center"> 
                                   </center>
                                 </th>
                               </tr>
@@ -667,7 +666,7 @@
                                 <tr>
                                   <th>
                                     <center data-parsed=""> 
-                                      <img src="http://placehold.it/172x100" align="center" class="float-center"> 
+                                      <img editable="true" src="http://placehold.it/172x100" align="center" class="float-center"> 
                                     </center>
                                   </th>
                                 </tr>
@@ -714,7 +713,7 @@
                                 <tr>
                                   <th>
                                     <center data-parsed=""> 
-                                      <img src="http://placehold.it/172x100" align="center" class="float-center"> 
+                                      <img editable="true" src="http://placehold.it/172x100" align="center" class="float-center"> 
                                     </center>
                                   </th>
                                 </tr>
@@ -753,7 +752,7 @@
                                 <tr>
                                   <th>
                                     <center data-parsed=""> 
-                                      <img src="http://placehold.it/172x100" align="center" class="float-center"> 
+                                      <img editable="true" src="http://placehold.it/172x100" align="center" class="float-center"> 
                                     </center>
                                   </th>
                                 </tr>
@@ -792,7 +791,7 @@
                                 <tr>
                                   <th>
                                     <center data-parsed=""> 
-                                      <img src="http://placehold.it/172x100" align="center" class="float-center"> 
+                                      <img editable="true" src="http://placehold.it/172x100" align="center" class="float-center"> 
                                     </center>
                                   </th>
                                 </tr>
@@ -847,7 +846,7 @@
                               <td>
                                 <table>
                                   <tr>
-                                    <th class="menu-item"><a href="http://zurb.com">Edit your subscription</a> | <a href="http://zurb.com">Unsubscribe Instantly</a>
+                                    <th class="menu-item"><a href="http://zurb.com">Edit your subscription</a> | <a href="http://zurb.com"><unsubscribe>Unsubscribe Instantly</unsubscribe></a>
                                     </th>
                                   </tr>
                                 </table>
