Updated unsub tags.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                               <td>
                                 <table>
                                   <tr>
-                                    <th class="menu-item"><a href="http://zurb.com">Web version</a> | <a href="http://zurb.com">Update preferences</a> | <a href="http://zurb.com"><unsubscribe>Unsubscribe</unsubscribe></a></th>
+                                    <th class="menu-item"><a href="http://zurb.com">Web version</a> | <a href="http://zurb.com">Update preferences</a> | <unsubscribe>Unsubscribe</unsubscribe></th>
                                   </tr>
                                 </table>
                               </td>
@@ -846,7 +846,7 @@
                               <td>
                                 <table>
                                   <tr>
-                                    <th class="menu-item"><a href="http://zurb.com">Edit your subscription</a> | <a href="http://zurb.com"><unsubscribe>Unsubscribe Instantly</unsubscribe></a>
+                                    <th class="menu-item"><a href="http://zurb.com">Edit your subscription</a> |  <unsubscribe>Unsubscribe Instantly</unsubscribe></a>
                                     </th>
                                   </tr>
                                 </table>
