Include image width values.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 <tr>
                                   <th>
                                     <center data-parsed=""> 
-                                      <img src="http://placehold.it/548x200" align="center" class="float-center"> 
+                                      <img src="http://placehold.it/548x200" width="548" align="center" class="float-center"> 
                                     </center>
                                   </th>
                                 </tr>
@@ -175,7 +175,7 @@
                                   <tr>
                                     <th>
                                       <center data-parsed=""> 
-                                        <img src="http://placehold.it/548x200" align="center" class="float-center"> 
+                                        <img src="http://placehold.it/548x200" width="548" align="center" class="float-center"> 
                                       </center>
                                     </th>
                                   </tr>
@@ -265,7 +265,7 @@
                               <tr>
                                 <th>
                                   <center data-parsed=""> 
-                                    <img src="http://placehold.it/265x200" align="center" class="float-center"> 
+                                    <img src="http://placehold.it/265x200" width="265" align="center" class="float-center"> 
                                   </center>
                                 </th>
                               </tr>
@@ -312,7 +312,7 @@
                               <tr>
                                 <th>
                                   <center data-parsed=""> 
-                                    <img src="http://placehold.it/265x200" align="center" class="float-center"> 
+                                    <img src="http://placehold.it/265x200" width="265" align="center" class="float-center"> 
                                   </center>
                                 </th>
                               </tr>
@@ -452,7 +452,7 @@
                                 <tr>
                                   <th>
                                     <center data-parsed=""> 
-                                      <img src="http://placehold.it/265x200" align="center" class="float-center"> 
+                                      <img src="http://placehold.it/265x200" width="265" align="center" class="float-center"> 
                                     </center>
                                   </th>
                                 </tr>
@@ -472,7 +472,7 @@
                               <tr>
                                 <th>
                                   <center data-parsed=""> 
-                                    <img src="http://placehold.it/265x200" align="center" class="float-center"> 
+                                    <img src="http://placehold.it/265x200" width="265" align="center" class="float-center"> 
                                   </center>
                                 </th>
                               </tr>
@@ -520,7 +520,7 @@
                                 <tr>
                                   <th>
                                     <center data-parsed=""> 
-                                      <img src="http://placehold.it/265x200" align="center" class="float-center"> 
+                                      <img src="http://placehold.it/265x200" width="265" align="center" class="float-center"> 
                                     </center>
                                   </th>
                                 </tr>
@@ -560,7 +560,7 @@
                                 <tr>
                                   <th>
                                     <center data-parsed=""> 
-                                      <img src="http://placehold.it/265x200" align="center" class="float-center"> 
+                                      <img src="http://placehold.it/265x200" width="265" align="center" class="float-center"> 
                                     </center>
                                   </th>
                                 </tr>
@@ -627,7 +627,7 @@
                                 <tr>
                                   <th>
                                     <center data-parsed=""> 
-                                      <img src="http://placehold.it/172x100" align="center" class="float-center"> 
+                                      <img src="http://placehold.it/172x100" width="172" align="center" class="float-center"> 
                                     </center>
                                   </th>
                                 </tr>
@@ -647,7 +647,7 @@
                               <tr>
                                 <th>
                                   <center data-parsed=""> 
-                                    <img src="http://placehold.it/172x100" align="center" class="float-center"> 
+                                    <img src="http://placehold.it/172x100" width="172" align="center" class="float-center"> 
                                   </center>
                                 </th>
                               </tr>
@@ -667,7 +667,7 @@
                                 <tr>
                                   <th>
                                     <center data-parsed=""> 
-                                      <img src="http://placehold.it/172x100" align="center" class="float-center"> 
+                                      <img src="http://placehold.it/172x100" width="172" align="center" class="float-center"> 
                                     </center>
                                   </th>
                                 </tr>
