Included editable content areas.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
                                 <td>
                                   <table>
                                     <tr>
-                                      <th class="menu-item float-right text-right"><a href="http://zurb.com">Like</a></th>
+                                      <th class="menu-item float-right text-right">
+                                        <fblike likeurl="http://facebook.com/widgets/">
+                                          <img src="http://abcwidgets.com/fb-custom.gif" />
+                                          </fblike>
+                                      </th>
                                      <th class="menu-item text-right"><a href="http://zurb.com">Tweet</a></th>
                                       <th class="menu-item text-right"><a href="http://zurb.com">Forward</a></th>  
                                     </tr>
@@ -193,9 +197,9 @@
                                   <tr>
                                     <td>
                                        <div editable="true" class="editable-content"> 
-                                        <h6 class="heading-brand">Text with a full-width image repeater</h6>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc a eros in est posuere efficitur. In hac habitasse platea dictumst. Aenean tempor tristique vestibulum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas nec mauris finibus, ultricies ex eu..</p>
-                                        <p>Magna non elementum varius, lorem massa iaculis ligula, quis ultricies arcu leo vitae ipsum. Aliquam eros nibh, faucibus ut dictum sit amet, faucibus vel mauris. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus at eros justo. </p>
+                                        <h6 class="heading-brand"><multiline label="Content heading.">Text with a full-width image repeater</multiline></h6>
+                                        <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc a eros in est posuere efficitur. In hac habitasse platea dictumst. Aenean tempor tristique vestibulum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas nec mauris finibus, ultricies ex eu..</multiline></p>
+                                        <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc a eros in est posuere efficitur. In hac habitasse platea dictumst. Aenean tempor tristique vestibulum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas nec mauris finibus, ultricies ex eu..</multiline></p>
                                       </div> 
                                     </td>
                                   </tr>
@@ -242,9 +246,9 @@
                               <tr>
                                 <td>
                                   <div class="editable-content"> 
-                                    <h6 class="heading-brand">Left text with right image repeater</h6>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</p>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</p>
+                                    <h6 class="heading-brand"><multiline label="Content heading.">Left text with right image repeater</multiline></h6>
+                                    <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</multiline></p>
+                                    <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</multiline></p>
                                   </div>
                                 </td>
                               </tr>
@@ -331,9 +335,9 @@
                             <tr>
                               <td>
                                 <div class="editable-content"> 
-                                  <h6 class="heading-brand">Right text with left image repeater</h6>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</p>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</p>
+                                  <h6 class="heading-brand"><multiline label="Content heading.">Right text with left image repeater</multiline></h6>
+                                  <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</multiline></p>
+                                  <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</multiline></p>
                                 </div>
                               </td>
                             </tr>
@@ -380,9 +384,9 @@
                                 <tr>
                                   <td>
                                     <div class="editable-content"> 
-                                      <h6 class="heading-brand">Left and Right text repeater</h6>
-                                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</p>
-                                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</p>
+                                      <h6 class="heading-brand"><multiline label="Content heading">Left and Right text repeater</multiline></h6>
+                                      <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</multiline></p>
+                                      <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</multiline></p>
                                     </div>
                                   </td>
                                 </tr>
@@ -402,9 +406,9 @@
                                 <tr>
                                   <td>
                                     <div class="editable-content"> 
-                                      <h6 class="heading-brand">Left and Right text repeater</h6>
-                                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</p>
-                                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</p>
+                                      <h6 class="heading-brand"><multiline label="Content heading">Left and Right text repeater</multiline></h6>
+                                      <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</multiline></p>
+                                      <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</multiline></p>
                                     </div>
                                 </td>
                               </tr>
@@ -536,9 +540,9 @@
                                 <tr>
                                   <td>
                                     <div class="editable-content"> 
-                                      <h6 class="heading-brand">Left and Right text repeater</h6>
-                                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</p>
-                                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</p>
+                                      <h6 class="heading-brand"><multiline label="Content heading">Left and Right text repeater</multiline></h6>
+                                      <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</multiline></p>
+                                      <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</multiline></p>
                                     </div>
                                 </td>
                               </tr>
@@ -576,9 +580,9 @@
                                 <tr>
                                   <td>
                                     <div class="editable-content"> 
-                                      <h6 class="heading-brand">Left and Right text repeater</h6>
-                                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</p>
-                                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</p>
+                                      <h6 class="heading-brand"><multiline label="Content heading">Left and Right text repeater</multiline></h6>
+                                      <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</multiline></p>
+                                      <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</multiline></p>
                                     </div>
                                 </td>
                               </tr>
@@ -730,8 +734,8 @@
                                 <tr>
                                   <td>
                                     <div class="editable-content"> 
-                                        <h6 class="heading-brand">3 column heading</h6>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</p>
+                                        <h6 class="heading-brand"><multiline label="Content heading">3 column heading</multiline></h6>
+                                        <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</multiline></p>
                                     </div>                                
                                   </td>
                                 </tr>
@@ -769,9 +773,9 @@
                                 <tr>
                                   <td>
                                     <div class="editable-content"> 
-                                        <h6 class="heading-brand">3 column heading</h6>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</p>
-                                    </div>                                
+                                      <h6 class="heading-brand"><multiline label="Content heading">3 column heading</multiline></h6>
+                                      <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</multiline></p>
+                                    </div>                                   
                                   </td>
                                 </tr>
                             </tbody>
@@ -808,9 +812,9 @@
                                 <tr>
                                   <td>
                                     <div class="editable-content"> 
-                                        <h6 class="heading-brand">3 column heading</h6>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</p>
-                                    </div>                                
+                                      <h6 class="heading-brand"><multiline label="Content heading">3 column heading</multiline></h6>
+                                      <p><multiline label="Content text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eum eius numquam sint dolore voluptatibus beatae ab ad, dignissimos fugiat? Nisi odio commodi debitis eveniet tenetur provident aliquid tempora placeat.</multiline></p>
+                                    </div>                                 
                                   </td>
                                 </tr>
                             </tbody>
