Updated social styles.

--- a/index.html
+++ b/index.html
@@ -58,17 +58,13 @@
                                 <td>
                                   <table>
                                     <tr>
-                                      <th class="menu-item float-right text-right">
+                                      <th class="menu-item float-right text-right" id="top-socials">
                                         <a href="http://zurb.com">
                                           <img src="http://email-images.blickdevone.com.au/iconfinder_Mail_194919.png" alt="Facebook icon." />
                                         </a>
-                                      </th>
-                                     <th class="menu-item text-right">
-                                       <a href="http://zurb.com">
-                                        <img src="https://email-images.blickdevone.com.au/iconfinder_twitter_313466.png" alt="Twitter icon."/>
-                                      </a>
-                                    </th>
-                                      <th class="menu-item text-right">
+                                        <a href="http://zurb.com">
+                                          <img src="https://email-images.blickdevone.com.au/iconfinder_twitter_313466.png" alt="Twitter icon."/>
+                                        </a>
                                         <a href="http://zurb.com">
                                           <img src="https://email-images.blickdevone.com.au/iconfinder_Mail_194919.png" alt="Mail icon." />
                                         </a>
