Updated markup slightly.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width" />
   <title>Title</title>
   <link rel="stylesheet" href="css/foundation-emails.css" />
-  <link rel="stylesheet" href="css/custom.css" />
+  <link rel="stylesheet" href="css/custom_styles.css" />
 </head>
 <body>
   <table class="body" data-made-with-foundation>
@@ -44,7 +44,7 @@
                               <td>
                                 <table>
                                   <tr>
-                                    <th class="menu-item"><a href="http://zurb.com">Web version</a> | <a href="http://zurb.com">Update preferences</a> | <unsubscribe>Unsubscribe</unsubscribe></th>
+                                    <th class="menu-item"><webversion>Web version</webversion> | <preferences>Update preferences</preferences> | <unsubscribe>Unsubscribe</unsubscribe></th>
                                   </tr>
                                 </table>
                               </td>
@@ -52,14 +52,14 @@
                           </table>
                         </th>
                         <th class="small-12 large-5 columns last">
-                            <table class="menu" align="right">
+                          <table class="menu" align="right">
                               <tr>
                                 <td>
                                   <table>
                                     <tr>
                                       <th class="menu-item text-right" id="top-socials">  
                                         <fblike likeurl="https://www.facebook.com/blick/">
-                                          <img src="http://email-images.blickdevone.com.au/iconfinder_Mail_194919.png" alt="Facebook icon." />
+                                          <img src="http://email-images.blickdevone.com.au/iconfinder_facebook_313485.png" alt="Facebook icon." />
                                         </fblike>
                                         <tweet tweeturl="https://twitter.com/">
                                           <img src="https://email-images.blickdevone.com.au/iconfinder_twitter_313466.png" alt="Twitter icon."/>
@@ -72,7 +72,7 @@
                                   </table>
                                 </td>
                               </tr>
-                            </table>
+                          </table>
                         </th>
                       </tr>
                     </tbody>
@@ -853,7 +853,7 @@
                               <td>
                                 <table>
                                   <tr>
-                                    <th class="menu-item"><a href="http://zurb.com">Edit your subscription</a> |  <unsubscribe>Unsubscribe Instantly</unsubscribe></a>
+                                    <th class="menu-item"><preferences>Edit your subscription</preferences> |  <unsubscribe>Unsubscribe Instantly</unsubscribe></a>
                                     </th>
                                   </tr>
                                 </table>
