Made css changes after testing.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                   <table>
                                     <tr>
                                       <th class="menu-item text-right" id="top-socials">  
-                                        <fblike likeurl="https://www.facebook.com/blick/">
+                                        <fblike likeurl="https://www.facebook.com/blick/" style="padding-left: 0!important;">
                                           <img src="http://email-images.blickdevone.com.au/iconfinder_facebook_313485.png" alt="Facebook icon." />
                                         </fblike>
                                         <tweet tweeturl="https://twitter.com/">
