--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Title</title>
+  <title>*|MC:SUBJECT|*</title>
   <link rel="stylesheet" href="css/foundation-emails.css" />
   <link rel="stylesheet" href="css/custom.css" />
 </head>
